finish service_delete, service_add_http, service_update
